--- a/app/assets/sass/layout/auth.scss
+++ b/app/assets/sass/layout/auth.scss
@@ -23,13 +23,19 @@
         text-shadow: 0px 0px 20px rgba(0, 0, 0, .6);
     }
 
-    &__form {
+    &__wrapper {
+        position: relative;
         background-color: #fff;
         padding: 2rem 1.5rem;
         border-radius: 1rem;
         max-width: 30rem;
         width: 90%;
         box-shadow: 0px 0px 20px rgba(0, 0, 0, .4);
+    }
+
+    &__form {
+        width: 100%;
+        height: 100%;
 
         display: flex;
         flex-flow: column;
