--- a/app/assets/sass/base/_reset.scss
+++ b/app/assets/sass/base/_reset.scss
@@ -47,3 +47,22 @@ a {
         opacity: .785;
     }
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+    margin: 10px 0;
+}
+
+::-webkit-scrollbar-track {
+    background: #FFF;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #1976d2;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #105eac;
+}
